# courseSolvedExercises

./: CMakeLists.txt  main.cpp
Bear/: Bear.cpp  Bear.h  bearMain.h
Bunny/: Bunny.cpp  Bunny.h  bunnyMain.h
FurnitureShop/: Furniture.cpp  Furniture.h  furnitureMain.h
HealthCareTax/: Employee.cpp  Employee.h  HealthCare.cpp  HealthCare.h  IInsured.h  ITaxPayer.h  Person.cpp  Person.h  TaxSystem.cpp  TaxSystem.h  healthTaxMain.h
